End CRUD task and small adjutments
