# collaborativeWorkflow/src/Controller/TaskBoardController.php
@@ -8,18 +8,19 @@ use App\DTO\TaskDto;
 use App\Formatter\TaskFormatter;
 use App\Services\TaskService;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
-use Symfony\Component\HttpFoundation\Response;
-use Symfony\Component\Routing\Attribute\Route;
 use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\HttpKernel\Attribute\MapRequestPayload;
+use Symfony\Component\Routing\Attribute\Route;
 
-#[Route('/tasks')]
+#[Route('/api/tasks')]
 final class TaskBoardController extends AbstractController
 {
     private TaskService $taskService;
     private TaskFormatter $taskFormatter;
 
-    public function __construct(TaskService $taskService, TaskFormatter $taskFormatter) {
+    public function __construct(TaskService $taskService, TaskFormatter $taskFormatter)
+    {
         $this->taskService = $taskService;
         $this->taskFormatter = $taskFormatter;
     }
@@ -28,13 +29,14 @@ final class TaskBoardController extends AbstractController
     public function fetchBoardTasks(int $id): Response
     {
         $data = $this->taskFormatter->formatTasks($this->taskService->fetchBoardTask($id));
+
         return new JsonResponse($data);
     }
 
     #[Route('/save', name: 'create_task', methods: ['POST'])]
-    public function createTask(#[MapRequestPayload] TaskDto $dto): Response
+    public function createTask(#[MapRequestPayload(validationGroups: ['create'])] TaskDto $dto): Response
     {
-          return $this->taskService->createTask($dto);
+        return $this->taskService->createTask($dto);
     }
 
     #[Route('/edit/{id}', name: 'edit_task', methods: ['PATCH'])]
@@ -48,5 +50,4 @@ final class TaskBoardController extends AbstractController
     {
         return $this->taskService->deleteTask($id);
     }
-
 }
